Tweak LLM model dan prompt koreksi ejaan

--- a/data/knowledge_base.json
+++ b/data/knowledge_base.json
@@ -77,7 +77,7 @@
       "category": "organization"
     },
       {
-        "correct_phrase": "next g",
+        "correct_phrase": "Next-G",
         "common_mistakes": [
           "next ji",
           "next gee",
